--- a/client/src/components/header/Header.css
+++ b/client/src/components/header/Header.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     background-color: moccasin;
+    justify-content: space-between;
     padding: 20px 30px;
 }
 .mainLogo {
