--- a/client/src/components/modal/Modal.css
+++ b/client/src/components/modal/Modal.css
@@ -83,3 +83,10 @@ margin-bottom: 6px
 .calendarModal{
    padding: 3px 6px !important;
 }
+
+.buttonsWrapper{
+    display: flex;
+}
+.buttonAdd {
+    margin-right: 10px;
+}
